src/test/deca/syntax/valid/cond_pars_01.deca
// Description:
//    Programme minimaliste utilisant un commentaire.
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

{
    int i = 1;
    if ((i == 1 && i > 2) || (i <= 1)) {
        println("Hello");
    }

}