src/test/deca/syntax/invalid/doublepvirgule_pars_01.deca
// Description:
//    Programme minimaliste qui teste la détection de 2 points virgule.
//
// Resultats:
//      Erreur ligne 11:
//
// Historique:
//    cree le 01/01/2023

{
     int x;;
}